Made button responsive, solved responsive issue in gform

--- a/stylecontact.css
+++ b/stylecontact.css
@@ -93,8 +93,8 @@ p{
 
 @media screen and (max-width: 600px){
     .cstyle{
-        width: 200px;
-        height: 250px;
+        width: 100%;
+        height: 100vh;
     }
 
     h2{
