--- a/stylesubs.css
+++ b/stylesubs.css
@@ -45,14 +45,14 @@ a{
 
 @media screen and (max-width: 700px){
     .subs{
-        width: 440px;
-        height: 1750px;
+        width: 100%;
+        height: 100vh;
     }
 }
 
 @media screen and (max-width: 500px){
     .subs{
-        width: 240px;
-        height: 1450px;
+        width: 100%;
+        height: 100vh;
     }
 }
